[project]
name = "cuboClient"
version = "0.1.0"
description = "CuboClient-Python"
authors = [
    { name = "Rivera.ai/Fredy Rivera", email = "riveraaai200678@gmail.com" }
]

readme = "README.md"

requires-python = ">=3.8"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cuboClient"]